# molecularDynamics

./: .gitignore  LICENSE  README.md  default.nix  hie.yaml  molecularDynamics.cabal  stack.yaml
docs/: Main.html  doc-index.html  index.html
docs/src/: Main.html
src/: Helpers.hs  Main.hs  Newton.hs  Verlet.hs
