name:                molecularDynamics
version:             0.1.0.0
homepage:            https://github.com/mkDoku/molecularDynamics#readme
license:             BSD3
license-file:        LICENSE
author:              Sascha Bubeck
maintainer:          bubecksascha@t-online.de
copyright:           2021 Sascha Bubeck
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable molecularDynamics
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:
        -O3
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , gloss
                     , random
